--- a/src/index.scss
+++ b/src/index.scss
@@ -36,6 +36,9 @@ img.rotate {
     }
 
     @include media-breakpoint-only(sm) {
+        column-count: 3;
+    }
+    @include media-breakpoint-only(xs) {
         column-count: 2;
     }
 }
